--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -7,20 +7,20 @@
   "nameOfExpense": "Name der Ausgabe",
   "selectCategories": "Kategorien auswählen",
   "categories": "Kategorien",
-  "deductFromTax": "Von der Steuer abziehen",
+  "deductFromTax": "Von der STEUER abziehen",
   "systematicExpenditure": "Systematische Ausgabe",
   "everyWeek": "Jede Woche",
   "everyMonth": "Jeden Monat",
   "everyQuarter": "Jedes Quartal",
   "everyYear": "Jedes Jahr",
   "numberOfUnits": "Anzahl der Einheiten",
-  "unitPrice": "Einheitspreis",
+  "unitPrice": "Stückpreis",
   "unitOfMeasurements": "Maßeinheit",
   "noUnitOfMeasurements": "Keine Maßeinheit",
   "save": "Speichern",
   "addEmployee": "Mitarbeiter hinzufügen",
   "enterYourName": "Geben Sie Ihren Namen ein",
-  "changeAdminPassword": "Admin-Passwort ändern",
+  "changeAdminPassword": "Administratorkennwort ändern",
   "exportToFile": "In Datei exportieren",
   "securityQuestions": "Sicherheitsfragen",
   "privacyPolicy": "Datenschutzrichtlinie",
@@ -29,9 +29,145 @@
   "restoreData": "Daten wiederherstellen",
   "clearData": "Daten löschen",
   "areYouSureYouWantToClearAllData": "Sind Sie sicher, dass Sie alle Daten löschen möchten?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+  "login": "Anmelden",
+  "userName": "Benutzername",
+  "password": "Kennwort",
+  "orSignInAs": "Oder anmelden als",
+  "adminMaine": "Administrator Maine",
+  "enterYourLastName": "Geben Sie Ihren Nachnamen ein",
+  "lastName": "Nachname",
+  "enterYourLogin": "Geben Sie Ihren Benutzernamen ein",
+  "enterYourPassword": "Geben Sie Ihr Passwort ein",
+  "selectCategoriesFromTheListnmaybeSeveral": "Wählen Sie Kategorien aus der Liste\\n(eventuell mehrere)",
+  "setPercentageOfIncomeIfNecessary": "Legen Sie bei Bedarf den Prozentsatz des Einkommens fest",
+  "setPercentageOfIncome": "Legen Sie den Prozentsatz des Einkommens fest",
+  "percentage": "Prozentsatz",
+  "visibilityLevelWithACrossFromTheList": "Sichtbarkeitsstufe mit einem Kreuz aus der Liste",
+  "employeePercentage": "Mitarbeiterprozentsatz",
+  "totalPercentagePerMonth": "Gesamtprozentsatz pro Monat",
+  "amountPercentagePerDay": "Prozentsatzbetrag pro Tag",
+  "showPhone": "Telefon anzeigen",
+  "totalPriceServicePerDay": "Gesamtpreis des Services pro Tag",
+  "saveEmployee": "Mitarbeiter speichern",
+  "numberOfServiceForMonth": "Anzahl der Services für den Monat",
+  "hello": "Hallo, ",
+  "addReport": "Bericht hinzufügen",
+  "nameOfClient": "Name des Kunden",
+  "lastNameOfClient": "Nachname des Kunden",
+  "phoneNumber": "Telefonnummer",
+  "newCustomer": "Neukunde",
+  "regularCustomer": "Stammkunde",
+  "paymentByCard": "Zahlung per Karte",
+  "selectCategory": "Kategorie auswählen",
+  "selectService": "Dienst auswählen",
+  "priceOfService": "Preis des Dienstes",
+  "price": "Preis",
+  "submit": "Senden",
+  "addService": "Dienst hinzufügen",
+  "createOrSelectACategory": "Kategorie erstellen oder auswählen",
+  "orCreateANewCategory": "Oder neue Kategorie erstellen",
+  "enterCategoryName": "Kategorienamen eingeben",
+  "nameOfTheService": "Name des Dienstes",
+  "categoryName": "Kategoriename",
+  "enterServiceName": "Dienstnamen eingeben",
+  "serviceName": "Dienstname",
+  "costOfMaterialsForThisServices": "Materialkosten für diesen Dienst",
+  "enterPrice": "Preis eingeben",
+  "adminLogin": "Administrator-Anmeldung",
+  "setAdminPassword": "Administratorkennwort festlegen",
+  "enterPasswordHere": "Kennwort hier eingeben",
+  "forgotPassword": "Kennwort vergessen?",
+  "resetHere": "Hier zurücksetzen",
+  "exit": "Beenden",
+  "areYouSureYouWantToExitTheApp": "Sind Sie sicher? Sie möchten die App beenden.",
+  "exitApp": "App beenden",
+  "yes": "Ja",
+  "no": "Nein",
+  "costsFilter": "Kostenfilter",
+  "clear": "Löschen",
+  "nameOfCost": "Name der Kosten",
+  "costsPriceRange": "Kostenpreisspanne",
+  "minPrice": "Mindestpreis",
+  "maxPrice": "Höchstpreis",
+  "applyFilter": "Filter anwenden",
+  "cancel": "Abbrechen",
+  "confirm": "Bestätigen",
+  "all": "Alle",
+  "done": "Fertig",
+  "newPassword": "Neues Passwort",
+  "editCategory": "Kategorie bearbeiten",
+  "editService": "Dienst bearbeiten",
+  "answerTheSecurityQuestionsToLogin": "Beantworten Sie die Sicherheitsfragen, um sich anzumelden",
+  "answer": "Antworten",
+  "incorrectAnswer": "Falsche Antwort",
+  "pleaseTryAgain": "Bitte versuchen Sie es erneut",
+  "previousQuestion": "Vorherige Frage",
+  "selectQuestion": "Frage auswählen",
+  "pleaseSelectAQuestion": "Bitte wählen Sie eine Frage aus",
+  "pleaseFillInTheAnswerField": "Bitte füllen Sie das Antwortfeld aus",
+  "report": "Bericht:",
+  "employeeName": "Mitarbeitername:",
+  "isRegularCus": "Ist regulärer Kunde. : ",
+  "cardPay": "Kartenzahlung: ",
+  "date": "Datum : ",
+  "category": "Kategorie: ",
+  "service": "Dienst: ",
+  "editReport": "Bericht bearbeiten",
+  "employees": "Mitarbeiter",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Kein Mitarbeiter gefunden\\nBitte fügen Sie einen neuen Mitarbeiter hinzu.",
+  "search": "Suchen",
+  "accessLevel": "Zugriffsebene",
+  "notLimited": "Nicht begrenzt",
+  "limited": "Begrenzt",
+  "applyFilters": "Filter anwenden",
+  "filters": "Filter",
+  "phone": "Telefon",
+  "priceRange": "Preisspanne",
+  "dates": "Daten",
+  "from": "Von",
+  "to": "Bis",
+  "masters": "Master",
+  "services": "Dienste",
+  "selectLanguage": "Sprache auswählen",
+  "nameOfncost": "Name der\\nKosten",
+  "relatedncategories": "Verwandte\\nKategorien",
+  "deductednfromTax": "Von der STEUER abgezogen",
+  "systematicnexpenditure": "Systemmatic\\nExpenditure",
+"deleteCost": "Kosten löschen",
+"areYouSureYouWantToDeleteThisCost": "Möchten Sie diese Kosten wirklich löschen?",
+"noData": "Keine Daten",
+"regncus": "Reg\\nCus",
+"cardnpay": "Card\\nPay",
+"employeendata": "Mitarbeiterdaten",
+"customerndata": "Kundendaten",
+"newncus": "Neuer\\nCus",
+"total": "Gesamt",
+"deleted": "Gelöscht",
+"itemDeleted": "Artikel gelöscht",
+"deleteCategory": "Kategorie löschen",
+"areYouSureYouWantToDeleteThisCategory": "Möchten Sie diese Kategorie wirklich löschen?",
+"deleteService": "Dienst löschen",
+"areYouSureYouWantToDeleteThisService": "Sind Sie sicher Sie möchten diesen Dienst löschen?",
+"noServicesFoundnpleaseAddANewService": "Keine Dienste gefunden\\nBitte fügen Sie einen neuen Dienst hinzu",
+"backupRestoredSuccessfully": "Backup erfolgreich wiederhergestellt!",
+"reloadApp": "App neu laden",
+"restoringDatabase": "Datenbank wird wiederhergestellt...",
+"exported": "Exportiert",
+"checkYourFileInTheDownloadsFolder": "Überprüfen Sie Ihre Datei im Download-Ordner",
+"selectTheDatabaseToRestore": "Wählen Sie die wiederherzustellende Datenbank aus",
+"reportssalesTracker": "Berichte/Verkaufs-Tracker",
+"costsTracker": "Kosten-Tracker",
+"clearDates": "Daten löschen",
+"anErrorOccurred": "Ein Fehler ist aufgetreten",
+"noDataFound": "Keine Daten gefunden",
+"masternname": "Master\\nName",
+"noRegnclient": "Nein. Reg\\nClient",
+"noNewnclient": "Anzahl neuer\\nClients",
+"noOfnservices": "Anzahl\\nDienste",
+"cost": "Kosten",
+"newnclient": "Neuer\\nClient",
+"regnclient": "Reg\\nClient",
+"numOfnservices": "Anzahl\\nDienste",
+"costs": "Kosten",
+"sales": "Verkäufe"
 }
