--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,37 +1,173 @@
 {
-  "addCost": "Agregar costo",
+  "addCost": "Agregar Costo",
   "repetitionInterval": "Intervalo de repetición",
   "doNotRepeat": "No repetir",
-  "everyDay": "Cada día",
-  "name": "Nombre",
+  "everyDay": "todo el dia",
+   "name": " nombre ",
   "nameOfExpense": "Nombre del gasto",
   "selectCategories": "Seleccionar categorías",
   "categories": "Categorías",
-  "deductFromTax": "Deducir del impuesto",
+  "deductFromTax": "Deducir del IMPUESTO",
   "systematicExpenditure": "Gasto sistemático",
-  "everyWeek": "Cada semana",
+  "everyWeek": "Cada Semana",
   "everyMonth": "Cada mes",
   "everyQuarter": "Cada trimestre",
-  "everyYear": "Cada año",
-  "numberOfUnits": "Número de unidades",
-  "unitPrice": "Precio por unidad",
-  "unitOfMeasurements": "Unidad de medida",
+  "everyYear": "Todos los años",
+  "numberOfUnits": "Número de Unidades",
+  "unitPrice": "Precio unitario",
+  "unitOfMeasurements": "Unidad de medidas",
   "noUnitOfMeasurements": "Sin unidad de medida",
-  "save": "Guardar",
-  "addEmployee": "Agregar empleado",
-  "enterYourName": "Ingrese su nombre",
-  "changeAdminPassword": "Cambiar la contraseña de administrador",
+ "save": "Guardar",
+  "addEmployee": "Agregar Empleado",
+  "enterYourName": "Ingresa tu nombre",
+  "changeAdminPassword": "Cambiar contraseña de administrador",
   "exportToFile": "Exportar a archivo",
-  "securityQuestions": "Preguntas de seguridad",
+  "securityQuestions": "Preguntas de Seguridad",
   "privacyPolicy": "Política de privacidad",
   "dataBackup": "Copia de seguridad de datos",
-  "backupData": "Copia de seguridad de datos",
+  "backupData": "Datos de copia de seguridad",
   "restoreData": "Restaurar datos",
   "clearData": "Borrar datos",
   "areYouSureYouWantToClearAllData": "¿Está seguro de que desea borrar todos los datos?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+  "login": "Iniciar sesión",
+  "userName":"Nombre de usuario",
+  "password":  "Contraseña",
+  "orSignInAs": "O iniciar sesión como",
+  "adminMaine": "Administrador Maine",
+  "enterYourLastName": "Ingresa tu apellido",
+  "lastName": "ApellidoApellido",
+  "enterYourLogin": "Ingrese su nombre de usuario",
+  "enterYourPassword": "Ingrese su contraseña",
+  "selectCategoriesFromTheListnmaybeSeveral": "Seleccione categorías de la lista\\n(tal vez varias)",
+  "setPercentageOfIncomeIfNecessary": "Establece el porcentaje de ingresos si es necesario",
+  "setPercentageOfIncome": "Establecer porcentaje de ingresos",
+  "percentage": "Porcentaje",
+  "visibilityLevelWithACrossFromTheList": " Nivel de visibilidad con una cruz de la lista",
+  "employeePercentage": "Porcentaje de empleados",
+  "totalPercentagePerMonth": "Porcentaje total por mes",
+  "amountPercentagePerDay": "Cantidad Porcentaje por día",
+  "showPhone": "Mostrar teléfono",
+  "totalPriceServicePerDay": "Precio Total Servicio por día",
+  "saveEmployee": "Guardar Empleado",
+  "numberOfServiceForMonth": "Número de servicios por mes",
+  "hello":"Hola hola",
+  "addReport": "Agregar Informe",
+  "nameOfClient": "Nombre del Cliente",
+  "lastNameOfClient": "Apellido del Cliente",
+  "phoneNumber": "Número de teléfono",
+  "newCustomer": "Nuevo Cliente",
+  "regularCustomer": "Cliente habitual",
+  "paymentByCard": "Pago con Tarjeta",
+  "selectCategory": "Seleccionar categoría",
+  "selectService": "Seleccionar Servicio",
+  "priceOfService": "Precio del Servicio",
+  "price": "Precio",
+  "submit":"enviar",
+  "addService": "Agregar Servicio",
+  "createOrSelectACategory": "Crear o seleccionar una categoría",
+  "orCreateANewCategory": "O crear una nueva categoría",
+  "enterCategoryName": "Ingrese el nombre de la categoría",
+  "nameOfTheService": "Nombre del Servicio",
+  "categoryName": "Nombre de categoría",
+  "enterServiceName": "Ingrese el nombre del servicio",
+  "serviceName": "Nombre del servicio",
+  "costOfMaterialsForThisServices": "Costo de los Materiales para estos Servicios",
+  "enterPrice": "Ingresar Precio",
+  "adminLogin": "Inicio de sesión de administrador",
+  "setAdminPassword": "Establecer contraseña de administrador",
+  "enterPasswordHere": "Ingrese la contraseña aquí",
+  "forgotPassword": "¿Olvidaste tu contraseña?",
+  "resetHere": "Restablecer aquí",
+  "exit": "Salir",
+  "areYouSureYouWantToExitTheApp": "¿Estás seguro? Quieres salir de la aplicación.",
+  "exitApp": "Salir de la aplicación",
+  "yes":"Sí",
+  "no":"no",
+  "costsFilter": "Filtro de Costos",
+  "clear": "Borrar",
+  "nameOfCost": "Nombre del costo",
+  "costsPriceRange": "Rango de Precios de Costos",
+  "minPrice": "Precio mínimo",
+  "maxPrice": "Precio máximo",
+  "applyFilter": "Aplicar filtro",
+  "cancel": "Cancelar",
+  "confirm": "Confirmar",
+   "all":"todo",
+    "done":"hecho",
+  "newPassword": "Nueva Contraseña",
+  "editCategory": "Editar categoría",
+  "editService": "Editar servicio",
+  "answerTheSecurityQuestionsToLogin": "Responde las preguntas de seguridad para iniciar sesión",
+  "answer": "Respuesta",
+  "incorrectAnswer": "Respuesta incorrecta",
+  "pleaseTryAgain": "Por favor, inténtalo de nuevo",
+  "previousQuestion": "Pregunta anterior",
+  "selectQuestion": "Seleccionar pregunta",
+  "pleaseSelectAQuestion": "Por favor seleccione una pregunta",
+  "pleaseFillInTheAnswerField": "Por favor complete el campo de respuesta",
+  "report": "Informe: ",
+  "employeeName": "Nombre del empleado: ",
+  "isRegularCus": "Es cliente regular: ",
+  "cardPay": "Pago con Tarjeta: ",
+  "date": "Fecha: ",
+  "category": "Categoría:",
+  "service": "Servicio:",
+  "editReport": "Editar informe",
+  "employees": "Empleados",
+  "noEmployeeFoundnpleaseAddANewEmployee": "No se encontró ningún empleado\\nPor favor agregue un nuevo empleado.",
+  "search": "Buscar",
+  "accessLevel": "Nivel de Acceso",
+  "notLimited": "No limitado",
+  "limited": "Limitado",
+  "applyFilters": "Aplicar filtros",
+  "filters": "Filtros",
+  "phone": "Teléfono",
+  "priceRange": "Rango de precios",
+  "dates": "Fechas",
+  "from": "De",
+  "to": "A",
+  "masters": "Maestros",
+  "services": "Servicios",
+  "selectLanguage": "Seleccionar idioma",
+  "nameOfncost": "Nombre del\\nCosto",
+  "relatedncategories": "Categorías\\nrelacionadas",
+  "deductednfromTax": "Deducido\\nDe IMPUESTOS",
+  "systematicnexpenditure": "Sistemamatic\\nGasto",
+ "deleteCost": "Eliminar Costo",
+ "areYouSureYouWantToDeleteThisCost": "¿Está seguro de que desea eliminar este costo?",
+ "noData": "Sin datos",
+ "regncus": "Reg\\nCus",
+ "cardnpay": "Tarjeta\\nPagar",
+ "employeendata": "Empleado\\nDatos",
+ "customerndata": "Cliente\\nDatos",
+ "newncus": "Nuevo\\nCus",
+ "total": "total",
+ "deleted": "Eliminado",
+ "itemDeleted": "Elemento eliminado",
+ "deleteCategory": "Eliminar categoría",
+ "areYouSureYouWantToDeleteThisCategory": "¿Está seguro de que desea eliminar esta categoría?",
+ "deleteService": "Eliminar servicio",
+ "areYouSureYouWantToDeleteThisService": "¿Está seguro de que desea eliminar este servicio?",
+ "noServicesFoundnpleaseAddANewService": "No se encontraron servicios\\nPor favor agregue un nuevo servicio",
+ "backupRestoredSuccessfully": "¡Copia de seguridad restaurada exitosamente!",
+ "reloadApp": "Recargar aplicación",
+ "restoringDatabase": "Restaurando base de datos...",
+ "exported": "Exportado",
+ "checkYourFileInTheDownloadsFolder": "Revisa tu archivo en la carpeta Descargas",
+ "selectTheDatabaseToRestore": "Seleccione la base de datos para restaurar",
+ "reportssalesTracker": "Reportes/Rastreador de Ventas",
+ "costsTracker": "Rastreador de Costos",
+ "clearDates": "Borrar fechas",
+ "anErrorOccurred": "Ocurrió un error",
+ "noDataFound": "No se encontraron datos",
+ "masternname": "Maestro\\nNombre",
+ "noRegnclient": "No. Reg\\nCliente",
+ "noNewnclient": "Nº Nuevo\\nCliente",
+ "noOfnservices": "Nº de\\nservicios",
+ "cost": "costo",
+ "newnclient": "Nuevo\\nCliente",
+ "regnclient": "Reg\\nCliente",
+ "numOfnservices": "Núm. de\\nServicios",
+ "costs": "costos",
+ "sales": "Ventas"
 }
