--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,37 +1,173 @@
 {
-  "addCost": "Dodaj koszt",
-  "repetitionInterval": "Interwał powtórzeń",
-  "doNotRepeat": "Nie powtarzaj",
-  "everyDay": "Codziennie",
-  "name": "Nazwa",
-  "nameOfExpense": "Nazwa wydatku",
-  "selectCategories": "Wybierz kategorie",
-  "categories": "Kategorie",
-  "deductFromTax": "Odlicz od podatku",
-  "systematicExpenditure": "Systematyczny wydatek",
-  "everyWeek": "Co tydzień",
-  "everyMonth": "Co miesiąc",
-  "everyQuarter": "Co kwartał",
-  "everyYear": "Co roku",
-  "numberOfUnits": "Liczba jednostek",
-  "unitPrice": "Cena za jednostkę",
-  "unitOfMeasurements": "Jednostka miary",
-  "noUnitOfMeasurements": "Brak jednostki miary",
-  "save": "Zapisz",
-  "addEmployee": "Dodaj pracownika",
-  "enterYourName": "Wprowadź swoje imię",
-  "changeAdminPassword": "Zmień hasło administratora",
-  "exportToFile": "Eksportuj do pliku",
-  "securityQuestions": "Pytania bezpieczeństwa",
-  "privacyPolicy": "Polityka prywatności",
-  "dataBackup": "Kopia zapasowa danych",
-  "backupData": "Kopia zapasowa danych",
-  "restoreData": "Przywróć dane",
-  "clearData": "Wyczyść dane",
-  "areYouSureYouWantToClearAllData": "Czy na pewno chcesz wyczyścić wszystkie dane?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+ "addCost": "Dodaj koszt",
+ "repetitionInterval": "Interwał powtórzeń",
+ "doNotRepeat": "Nie powtarzaj",
+ "everyDay": "każdego dnia",
+ "name":"nazwa ",
+ "nameOfExpense": "Nazwa wydatku",
+ "selectCategories": "Wybierz kategorie",
+ "categories": "Kategorie",
+ "deductFromTax": "Odliczenie od PODATKU",
+ "systematicExpenditure": "Wydatki systematyczne",
+ "everyWeek": "co tydzień",
+ "everyMonth": "Co miesiąc",
+ "everyQuarter": "Co kwartał",
+ "everyYear": "Co roku",
+ "numberOfUnits": "Liczba jednostek",
+ "unitPrice": "Cena jednostkowa",
+ "unitOfMeasurements": "Jednostka miary",
+ "noUnitOfMeasurements": "Brak jednostki miary",
+ "save": "Zapisz",
+ "addEmployee": "Dodaj pracownika",
+ "enterYourName": "Wpisz swoje imię",
+ "changeAdminPassword": "Zmień hasło administratora",
+ "exportToFile": "Eksportuj do pliku",
+ "securityQuestions": "Pytania dotyczące bezpieczeństwa",
+ "privacyPolicy": "Polityka prywatności",
+ "dataBackup": "Kopia zapasowa danych",
+ "backupData": "Kopia zapasowa danych",
+ "restoreData": "Przywróć dane",
+ "clearData": "Wyczyść dane",
+ "areYouSureYouWantToClearAllData": "Czy na pewno chcesz wyczyścić wszystkie dane?",
+ "login": "Zaloguj się",
+ "userName": "Nazwa użytkownika",
+ "password": "Hasło",
+ "orSignInAs": "Lub zaloguj się jako",
+ "adminMaine": "Admin Maine",
+ "enterYourLastName": "Wpisz swoje nazwisko",
+ "lastName": "Nazwisko",
+ "enterYourLogin": "Wprowadź swój login",
+ "enterYourPassword": "Wprowadź swoje hasło",
+ "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\\n(może kilka)",
+ "setPercentageOfIncomeIfNecessary": "Ustaw procent dochodu, jeśli to konieczne",
+ "setPercentageOfIncome": "Ustaw procent dochodu",
+ "percentage": "Procent",
+ "visibilityLevelWithACrossFromTheList": " Poziom widoczności z krzyżykiem z listy",
+ "employeePercentage": "Procent pracownika",
+ "totalPercentagePerMonth": "Całkowity procent miesięcznie",
+ "amountPercentagePerDay": "Procent kwoty dziennie",
+ "showPhone": "Pokaż telefon",
+ "totalPriceServicePerDay": "Całkowita cena usługi za dzień",
+ "saveEmployee": "Zapisz pracownika",
+ "numberOfServiceForMonth": "Numer usługi w miesiącu",
+ "hello":"cześć cześć, ",
+ "addReport": "Dodaj raport",
+ "nameOfClient": "Nazwa Klienta",
+ "lastNameOfClient": "Nazwisko Klienta",
+ "phoneNumber": "Numer telefonu",
+ "newCustomer": "Nowy Klient",
+ "regularCustomer": "Stały Klient",
+ "paymentByCard": "Płatność Kartą",
+ "selectCategory": "Wybierz kategorię",
+ "selectService": "Wybierz usługę",
+ "priceOfService": "Cena usługi",
+ "price": "Cena",
+ "submit":"Prześlij",
+ "addService": "Dodaj usługę",
+ "createOrSelectACategory": "Utwórz lub wybierz kategorię",
+ "orCreateANewCategory": "Lub utwórz nową kategorię",
+ "enterCategoryName": "Wprowadź nazwę kategorii",
+ "nameOfTheService": "Nazwa usługi",
+ "categoryName": "Nazwa kategorii",
+ "enterServiceName": "Wprowadź nazwę usługi",
+ "serviceName": "Nazwa usługi",
+ "costOfMaterialsForThisServices": "Koszt materiałów do tej Usługi",
+ "enterPrice": "Wprowadź cenę",
+ "adminLogin": "Logowanie administratora",
+ "setAdminPassword": "Ustaw hasło administratora",
+ "enterPasswordHere": "Wpisz tutaj hasło",
+ "forgotPassword": "Zapomniałeś hasła?",
+ "resetHere": "Zresetuj tutaj",
+ "exit": "Wyjście",
+ "areYouSureYouWantToExitTheApp": "Czy jesteś pewien? Chcesz wyjść z aplikacji.",
+ "exitApp": "Wyjdź z aplikacji",
+ "yes":"tak",
+ "no":"Nie",
+ "costsFilter": "Filtr kosztów",
+ "clear": "Wyczyść",
+ "nameOfCost": "Nazwa kosztu",
+ "costsPriceRange": "Przedział cenowy kosztów",
+ "minPrice": "Cena minimalna",
+ "maxPrice": "Cena maksymalna",
+ "applyFilter": "Zastosuj filtr",
+ "cancel": "Anuluj",
+ "confirm": "Potwierdź",
+ "all":"wszystko",
+ "done":"gotowe",
+ "newPassword": "Nowe hasło",
+ "editCategory": "Edytuj kategorię",
+ "editService": "Edytuj usługę",
+ "answerTheSecurityQuestionsToLogin": "Odpowiedz na pytania zabezpieczające, aby się zalogować",
+ "answer": "odpowiedź",
+ "incorrectAnswer": "Niepoprawna odpowiedź",
+ "pleaseTryAgain": "Spróbuj ponownie",
+ "previousQuestion": "Poprzednie pytanie ",
+ "selectQuestion": "Wybierz pytanie",
+ "pleaseSelectAQuestion": "Proszę wybrać pytanie",
+ "pleaseFillInTheAnswerField": "Proszę wypełnić pole odpowiedzi",
+ "report": "Raport: ",
+ "employeeName": "Nazwisko pracownika: ",
+ "isRegularCus": "Jest zwykłym zwyczajem: ",
+ "cardPay": "Płatność kartą: ",
+ "date": "Data: ",
+ "category": "Kategoria: ",
+ "service": "usługa: ",
+ "editReport": "Edytuj raport",
+ "employees": "pracownicy",
+ "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracownika\\nProszę dodać nowego pracownika.",
+ "search":"Szukaj",
+ "accessLevel": "Poziom dostępu",
+ "notLimited": "Bez ograniczeń",
+ "limited": "ograniczony",
+ "applyFilters": "Zastosuj filtry",
+ "filters": "Filtry",
+ "phone": "Telefon",
+ "priceRange": "Przedział cenowy",
+ "dates": "Daty",
+ "from": "od",
+ "to": "do",
+ "masters": "mistrzowie",
+ "services": "Usługi",
+ "selectLanguage": "Wybierz język",
+ "nameOfncost": "Nazwa\\nKosztu",
+ "relatedncategories": "Powiązane\\nKategorie",
+ "deductednfromTax": "Odliczone\\nOd podatku",
+ "systematicnexpenditure": "Systematic\\nWydatki",
+ "deleteCost": "Usuń koszt",
+ "areYouSureYouWantToDeleteThisCost": "Czy na pewno chcesz usunąć ten koszt?",
+ "noData": "Brak danych",
+ "regncus": "Reg\\nCus",
+ "cardnpay": "Karta\\nZapłać",
+ "employeendata": "Dane pracownika\\n",
+ "customerndata": "Dane klienta\\n",
+ "newncus": "Nowy\\nCus",
+ "total": "Łącznie",
+ "deleted": "usunięte",
+ "itemDeleted": "Element usunięty",
+ "deleteCategory": "Usuń kategorię",
+ "areYouSureYouWantToDeleteThisCategory": "Czy na pewno chcesz usunąć tę kategorię?",
+ "deleteService": "Usuń usługę",
+ "areYouSureYouWantToDeleteThisService": "Czy na pewno chcesz usunąć tę usługę?",
+ "noServicesFoundnpleaseAddANewService": "Nie znaleziono usług\\nProszę dodać nową usługę",
+ "backupRestoredSuccessfully": "Kopia zapasowa została przywrócona pomyślnie!",
+ "reloadApp": "Załaduj ponownie aplikację",
+ "restoringDatabase": "Przywracanie bazy danych...",
+ "exported": "Wyeksportowane",
+ "checkYourFileInTheDownloadsFolder": "Sprawdź swój plik w folderze Pobrane",
+ "selectTheDatabaseToRestore": "Wybierz bazę danych do przywrócenia",
+ "reportssalesTracker": "Monitor raportów/sprzedaży",
+ "costsTracker": "Śledzenie kosztów",
+ "clearDates": "Wyczyść daty",
+ "anErrorOccurred": "Wystąpił błąd",
+ "noDataFound": "Nie znaleziono danych",
+ "masternname": "Master\\nNazwa",
+ "noRegnclient": "Nr rej\\nKlient",
+ "noNewnclient": "Nie. Nowy\\nKlient",
+ "noOfnservices": "Liczba\\nusług",
+ "cost": "Koszt",
+ "newnclient": "Nowy\\nKlient",
+ "regnclient": "Zarejestruj\\nKlienta",
+ "numOfnservices": "Liczba\\nusług",
+ "costs": "koszty",
+ "sales": "sprzedaż"
 }
