--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -2,12 +2,12 @@
   "addCost": "Добавить стоимость",
   "repetitionInterval": "Интервал повторения",
   "doNotRepeat": "Не повторять",
-  "everyDay": "Каждый день",
+   "everyDay":"каждый день",
   "name": "Имя",
   "nameOfExpense": "Название расхода",
-  "selectCategories": "Выберите категории",
+  "selectCategories": "Выбрать категории",
   "categories": "Категории",
-  "deductFromTax": "Вычесть из налога",
+  "deductFromTax": "Вычесть из НАЛОГА",
   "systematicExpenditure": "Систематические расходы",
   "everyWeek": "Каждую неделю",
   "everyMonth": "Каждый месяц",
@@ -15,23 +15,159 @@
   "everyYear": "Каждый год",
   "numberOfUnits": "Количество единиц",
   "unitPrice": "Цена за единицу",
-  "unitOfMeasurements": "Единицы измерения",
+  "unitOfMeasurements": "Единица измерения",
   "noUnitOfMeasurements": "Нет единиц измерения",
   "save": "Сохранить",
   "addEmployee": "Добавить сотрудника",
-  "enterYourName": "Введите ваше имя",
-  "changeAdminPassword": "Сменить пароль администратора",
-  "exportToFile": "Экспорт в файл",
+  "enterYourName": "Введите свое имя",
+  "changeAdminPassword": "Изменить пароль администратора",
+  "exportToFile": "Экспортировать в файл",
   "securityQuestions": "Вопросы безопасности",
   "privacyPolicy": "Политика конфиденциальности",
   "dataBackup": "Резервное копирование данных",
-  "backupData": "Резервное копирование данных",
-  "restoreData": "Восстановление данных",
+  "backupData": "Резервные данные",
+  "restoreData": "Восстановить данные",
   "clearData": "Очистить данные",
-  "areYouSureYouWantToClearAllData": "Вы уверены, что хотите очистить все данные?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+  "areYouSureYouWantToClearAllData": "Вы уверены, что хотите удалить все данные?",
+  "login": "Войти",
+  "userName": "Имя пользователя",
+  "password": "Пароль",
+  "orSignInAs": "Или войдите как",
+  "adminMaine": "Администратор Мэн",
+  "enterYourLastName": "Введите свою фамилию",
+  "lastName": "Фамилия",
+  "enterYourLogin": "Введите свой логин",
+  "enterYourPassword": "Введите свой пароль",
+  "selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\\n(может быть несколько)",
+  "setPercentageOfIncomeIfNecessary": "При необходимости установите процент дохода",
+  "setPercentageOfIncome": "Установить процент дохода",
+  "percentage": "Процент",
+  "visibilityLevelWithACrossFromTheList": "Уровень видимости с крестиком из списка",
+  "employeePercentage": "Процент сотрудников",
+  "totalPercentagePerMonth": "Общий процент в месяц",
+  "amountPercentagePerDay": "Сумма в процентах в день",
+  "showPhone": "Показать телефон",
+  "totalPriceServicePerDay": "Общая стоимость услуги за день",
+  "saveEmployee": "Сохранить сотрудника",
+  "numberOfServiceForMonth": "Количество услуг за месяц",
+    "hello":"привет, ",
+  "addReport": "Добавить отчет",
+  "nameOfClient": "Имя клиента",
+  "lastNameOfClient": "Фамилия клиента",
+  "phoneNumber": "Номер телефона",
+  "newCustomer": "Новый клиент",
+  "regularCustomer": "Постоянный клиент",
+  "paymentByCard": "Оплата картой",
+  "selectCategory": "Выбрать категорию",
+  "selectService": "Выбрать услугу",
+  "priceOfService": "Цена услуги",
+  "price": "Цена",
+  "submit": "Отправить",
+  "addService": "Добавить сервис",
+  "createOrSelectACategory": "Создайте или выберите категорию",
+  "orCreateANewCategory": "Или создайте новую категорию",
+  "enterCategoryName": "Введите название категории",
+  "nameOfTheService": "Название службы",
+  "categoryName": "Название категории",
+  "enterServiceName": "Введите имя службы",
+  "serviceName": "Имя службы",
+  "costOfMaterialsForThisServices": "Стоимость материалов для этой услуги",
+  "enterPrice": "Введите цену",
+  "adminLogin": "Вход администратора",
+  "setAdminPassword": "Установить пароль администратора",
+  "enterPasswordHere": "Введите пароль здесь",
+  "forgotPassword": "Забыли пароль?",
+  "resetHere": "Сбросить здесь",
+  "exit": "Выход",
+  "areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
+  "exitApp": "Выйти из приложения",
+  "yes": "Да",
+  "no":"нет",
+  "costsFilter": "Фильтр затрат",
+  "clear": "Очистить",
+  "nameOfCost": "Название стоимости",
+  "costsPriceRange": "Диапазон цен затрат",
+  "minPrice": "Минимальная цена",
+  "maxPrice": "Максимальная цена",
+  "applyFilter": "Применить фильтр",
+  "cancel": "Отмена",
+  "confirm": "Подтвердить",
+  "all": "Все",
+    "done":"сделано",
+  "newPassword": "Новый пароль",
+  "editCategory": "Редактировать категорию",
+  "editService": "Редактировать сервис",
+  "answerTheSecurityQuestionsToLogin": "Ответьте на контрольные вопросы для входа в систему",
+  "answer": "Ответить",
+  "incorrectAnswer": "Неправильный ответ",
+  "pleaseTryAgain": "Пожалуйста, попробуйте еще раз",
+  "previousQuestion": "Предыдущий вопрос",
+  "selectQuestion": "Выбрать вопрос",
+  "pleaseSelectAQuestion": "Пожалуйста, выберите вопрос",
+  "pleaseFillInTheAnswerField": "Пожалуйста, заполните поле ответа",
+  "report": "Отчет: ",
+  "employeeName": "Имя сотрудника: ",
+  "isRegularCus": "Является обычным Cus. : ",
+  "cardPay": "Оплата картой: ",
+  "date": "Дата: ",
+  "category": "Категория: ",
+  "service": "Сервис: ",
+  "editReport": "Редактировать отчет",
+  "employees": "Сотрудники",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\\nПожалуйста, добавьте нового сотрудника.",
+  "search": "Поиск",
+  "accessLevel": "Уровень доступа",
+  "notLimited": "Не ограничено",
+  "limited": "Ограничено",
+  "applyFilters": "Применить фильтры",
+  "filters": "Фильтры",
+  "phone": "Телефон",
+  "priceRange": "Диапазон цен",
+  "dates": "Даты",
+  "from": "От",
+  "to": "Кому",
+  "masters": "Мастера",
+  "services": "Услуги",
+  "selectLanguage": "Выбрать язык",
+  "nameOfncost": "Имя\\nCost",
+  "relatedncategories": "Связанные\\nКатегории",
+  "deductednfromTax": "Вычтено\\nиз налога",
+  "systematicnexpenditure": "Системаматематические\\nРасходы",
+ "deleteCost": "Удалить стоимость",
+ "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить эту стоимость?",
+ "noData": "Нет данных",
+ "regncus": "Reg\\nCus",
+ "cardnpay": "Карта\\nPay",
+ "employeendata": "Данные о сотруднике\\n",
+ "customerndata": "Данные клиента\\n",
+ "newncus": "Новый\\nCus",
+ "total": "Итого",
+ "deleted": "Удален",
+ "itemDeleted": "Элемент удален",
+ "deleteCategory": "Удалить категорию",
+ "areYouSureYouWantToDeleteThisCategory": "Вы уверены, что хотите удалить эту категорию?",
+ "deleteService": "Удалить службу",
+ "areYouSureYouWantToDeleteThisService": "Вы уверены, что хотите удалить эту службу?",
+ "noServicesFoundnpleaseAddANewService": "Службы не найдены\\nПожалуйста, добавьте новую службу",
+ "backupRestoredSuccessfully": "Резервная копия успешно восстановлена!",
+ "reloadApp": "Перезагрузить приложение",
+ "restoringDatabase": "Восстановление базы данных...",
+ "exported": "Экспортировано",
+ "checkYourFileInTheDownloadsFolder": "Проверьте свой файл в папке Загрузки",
+ "selectTheDatabaseToRestore": "Выберите базу данных для восстановления",
+ "reportssalesTracker": "Отчеты/Отслеживание продаж",
+ "costsTracker": "Отслеживание затрат",
+ "clearDates": "Очистить даты",
+ "anErrorOccurred": "Произошла ошибка",
+ "noDataFound": "Данные не найдены",
+ "masternname": "Мастер\\nИмя",
+ "noRegnclient": "Нет. Reg\\nClient",
+ "noNewnclient": "Нет. Новый\\nКлиент",
+ "noOfnservices": "Нет\\nуслуг",
+ "cost": "Стоимость",
+ "newnclient": "Новый\\nКлиент",
+ "regnclient": "Регистр\\nКлиент",
+ "numOfnservices": "Количество\\nУслуг",
+ "costs": "расходы",
+ "sales": "Продажи"
 }
