--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -4,10 +4,10 @@
   "doNotRepeat": "Не повторювати",
   "everyDay": "Щодня",
   "name": "Ім'я",
-  "nameOfExpense": "Назва витрат",
-  "selectCategories": "Вибрати категорії",
+  "nameOfExpense": "Назва витрати",
+  "selectCategories": "Виберіть категорії",
   "categories": "Категорії",
-  "deductFromTax": "Відрахування від податку",
+  "deductFromTax": "Відрахувати з податку",
   "systematicExpenditure": "Систематичні витрати",
   "everyWeek": "Щотижня",
   "everyMonth": "Щомісяця",
@@ -15,23 +15,159 @@
   "everyYear": "Щороку",
   "numberOfUnits": "Кількість одиниць",
   "unitPrice": "Ціна за одиницю",
-  "unitOfMeasurements": "Одиниця виміру",
-  "noUnitOfMeasurements": "Немає одиниць виміру",
+  "unitOfMeasurements": "Одиниці вимірювання",
+  "noUnitOfMeasurements": "Немає одиниць вимірювання",
   "save": "Зберегти",
   "addEmployee": "Додати співробітника",
-  "enterYourName": "Введіть своє ім'я",
+  "enterYourName": "Введіть ваше ім'я",
   "changeAdminPassword": "Змінити пароль адміністратора",
   "exportToFile": "Експортувати у файл",
-  "securityQuestions": "Контрольні питання",
+  "securityQuestions": "Питання безпеки",
   "privacyPolicy": "Політика конфіденційності",
   "dataBackup": "Резервне копіювання даних",
   "backupData": "Резервне копіювання даних",
   "restoreData": "Відновити дані",
   "clearData": "Очистити дані",
   "areYouSureYouWantToClearAllData": "Ви впевнені, що хочете очистити всі дані?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+  "login": "Вхід",
+  "userName": "Ім'я користувача",
+  "password": "Пароль",
+  "orSignInAs": "Або увійдіть як",
+  "adminMaine": "Адмін Мен",
+  "enterYourLastName": "Введіть ваше прізвище",
+  "lastName": "Прізвище",
+  "enterYourLogin": "Введіть ваш логін",
+  "enterYourPassword": "Введіть ваш пароль",
+  "selectCategoriesFromTheListnmaybeSeveral": "Виберіть категорії зі списку\\n(можливо кілька)",
+  "setPercentageOfIncomeIfNecessary": "Встановіть відсоток доходу за необхідності",
+  "setPercentageOfIncome": "Встановіть відсоток доходу",
+  "percentage": "Відсоток",
+  "visibilityLevelWithACrossFromTheList": "Рівень видимості з хрестиком зі списку",
+  "employeePercentage": "Відсоток співробітника",
+  "totalPercentagePerMonth": "Загальний відсоток за місяць",
+  "amountPercentagePerDay": "Сума відсотка за день",
+  "showPhone": "Показати телефон",
+  "totalPriceServicePerDay": "Загальна ціна послуги за день",
+  "saveEmployee": "Зберегти співробітника",
+  "numberOfServiceForMonth": "Кількість послуг за місяць",
+  "hello": "Привіт, ",
+  "addReport": "Додати звіт",
+  "nameOfClient": "Ім'я клієнта",
+  "lastNameOfClient": "Прізвище клієнта",
+  "phoneNumber": "Номер телефону",
+  "newCustomer": "Новий клієнт",
+  "regularCustomer": "Постійний клієнт",
+  "paymentByCard": "Оплата карткою",
+  "selectCategory": "Виберіть категорію",
+  "selectService": "Виберіть послугу",
+  "priceOfService": "Ціна послуги",
+  "price": "Ціна",
+  "submit": "Надіслати",
+  "addService": "Додати послугу",
+  "createOrSelectACategory": "Створіть або виберіть категорію",
+  "orCreateANewCategory": "Або створіть нову категорію",
+  "enterCategoryName": "Введіть назву категорії",
+  "nameOfTheService": "Назва послуги",
+  "categoryName": "Назва категорії",
+  "enterServiceName": "Введіть назву послуги",
+  "serviceName": "Назва послуги",
+  "costOfMaterialsForThisServices": "Вартість матеріалів для цієї послуги",
+  "enterPrice": "Введіть ціну",
+  "adminLogin": "Вхід для адміністратора",
+  "setAdminPassword": "Встановіть пароль адміністратора",
+  "enterPasswordHere": "Введіть пароль тут",
+  "forgotPassword": "Забули пароль?",
+  "resetHere": "Скинути тут",
+  "exit": "Вийти",
+  "areYouSureYouWantToExitTheApp": "Ви впевнені? Ви хочете вийти з програми.",
+  "exitApp": "Вийти з програми",
+  "yes": "Так",
+  "no": "Ні",
+  "costsFilter": "Фільтр витрат",
+  "clear": "Очистити",
+  "nameOfCost": "Назва витрат",
+  "costsPriceRange": "Ціновий діапазон витрат",
+  "minPrice": "Мінімальна ціна",
+  "maxPrice": "Максимальна ціна",
+  "applyFilter": "Застосувати фільтр",
+  "cancel": "Скасувати",
+  "confirm": "Підтвердити",
+  "all": "Все",
+  "done": "Готово",
+  "newPassword": "Новий пароль",
+  "editCategory": "Редагувати категорію",
+  "editService": "Редагувати послугу",
+  "answerTheSecurityQuestionsToLogin": "Відповідайте на питання безпеки для входу",
+  "answer": "Відповідь",
+  "incorrectAnswer": "Неправильна відповідь",
+  "pleaseTryAgain": "Спробуйте ще раз",
+  "previousQuestion": "Попереднє питання",
+  "selectQuestion": "Виберіть питання",
+  "pleaseSelectAQuestion": "Будь ласка, виберіть питання",
+  "pleaseFillInTheAnswerField": "Будь ласка, заповніть поле відповіді",
+  "report": "Звіт: ",
+  "employeeName": "Ім'я співробітника: ",
+  "isRegularCus": "Постійний клієнт: ",
+  "cardPay": "Оплата карткою: ",
+  "date": "Дата: ",
+  "category": "Категорія: ",
+  "service": "Послуга: ",
+  "editReport": "Редагувати звіт",
+  "employees": "Співробітники",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Співробітників не знайдено\\nБудь ласка, додайте нового співробітника.",
+  "search": "Пошук",
+  "accessLevel": "Рівень доступу",
+  "notLimited": "Не обмежено",
+  "limited": "Обмежено",
+  "applyFilters": "Застосувати фільтри",
+  "filters": "Фільтри",
+  "phone": "Телефон",
+  "priceRange": "Ціновий діапазон",
+  "dates": "Дати",
+  "from": "Від",
+  "to": "До",
+  "masters": "Майстри",
+  "services": "Послуги",
+  "selectLanguage": "Виберіть мову",
+  "nameOfncost": "Назва витрат",
+  "relatedncategories": "Пов'язані категорії",
+  "deductednfromTax": "Відраховано з податку",
+  "systematicnexpenditure": "Систематичні витрати",
+  "deleteCost": "Видалити витрати",
+  "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити ці витрати?",
+  "noData": "Немає даних",
+  "regncus": "Постійний клієнт",
+  "cardnpay": "Оплата карткою",
+  "employeendata": "Дані співробітника",
+  "customerndata": "Дані клієнта",
+  "newncus": "Новий клієнт",
+  "total": "Загальний",
+  "deleted": "Видалено",
+  "itemDeleted": "Елемент видалено",
+  "deleteCategory": "Видалити категорію",
+  "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
+  "deleteService": "Видалити послугу",
+  "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю послугу?",
+  "noServicesFoundnpleaseAddANewService": "Послуг не знайдено\\nБудь ласка, додайте нову послугу",
+  "backupRestoredSuccessfully": "Резервна копія успішно відновлена!",
+  "reloadApp": "Перезавантажити програму",
+  "restoringDatabase": "Відновлення бази даних...",
+  "exported": "Експортовано",
+  "checkYourFileInTheDownloadsFolder": "Перевірте ваш файл у папці Завантаження",
+  "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
+  "reportssalesTracker": "Звіти/Трекер продажів",
+  "costsTracker": "Трекер витрат",
+  "clearDates": "Очистити дати",
+  "anErrorOccurred": "Сталася помилка",
+  "noDataFound": "Даних не знайдено",
+  "masternname": "Ім'я майстра",
+  "noRegnclient": "Кількість постійних клієнтів",
+  "noNewnclient": "Кількість нових клієнтів",
+  "noOfnservices": "Кількість послуг",
+  "cost": "Вартість",
+  "newnclient": "Новий клієнт",
+  "regnclient": "Постійний клієнт",
+  "numOfnservices": "Кількість послуг",
+  "costs": "витрати",
+  "sales": "Продажі"
 }
