--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,22 +1,22 @@
 {
-  "addCost": "Přidat náklad",
+  "addCost": "Přidat cenu",
   "repetitionInterval": "Interval opakování",
   "doNotRepeat": "Neopakovat",
   "everyDay": "Každý den",
   "name": "Jméno",
   "nameOfExpense": "Název výdaje",
   "selectCategories": "Vyberte kategorie",
-  "categories": "Kategorie",
-  "deductFromTax": "Odpočítat z daně",
-  "systematicExpenditure": "Systematický výdaj",
+  "categories": "kategorie",
+  "deductFromTax": "Odečíst z DANĚ",
+  "systematicExpenditure": "Systematické výdaje",
   "everyWeek": "Každý týden",
   "everyMonth": "Každý měsíc",
   "everyQuarter": "Každé čtvrtletí",
   "everyYear": "Každý rok",
   "numberOfUnits": "Počet jednotek",
-  "unitPrice": "Cena za jednotku",
-  "unitOfMeasurements": "Jednotky měření",
-  "noUnitOfMeasurements": "Žádné jednotky měření",
+  "unitPrice": "Jednotková cena",
+  "unitOfMeasurements": "Jednotka měření",
+  "noUnitOfMeasurements": "Žádná jednotka měření",
   "save": "Uložit",
   "addEmployee": "Přidat zaměstnance",
   "enterYourName": "Zadejte své jméno",
@@ -24,14 +24,150 @@
   "exportToFile": "Exportovat do souboru",
   "securityQuestions": "Bezpečnostní otázky",
   "privacyPolicy": "Zásady ochrany osobních údajů",
-  "dataBackup": "Záloha dat",
-  "backupData": "Zálohovat data",
+  "dataBackup": "Zálohování dat",
+  "backupData": "Zálohování dat",
   "restoreData": "Obnovit data",
   "clearData": "Vymazat data",
-  "areYouSureYouWantToClearAllData": "Jste si jisti, že chcete vymazat všechna data?",
-  "login": "Login",
-  "userName": "User Name",
-  "password": "Password",
-  "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine"
+  "areYouSureYouWantToClearAllData": "Opravdu chcete vymazat všechna data?",
+  "login": "Přihlásit se",
+  "userName": "Uživatelské jméno",
+  "password": "Heslo",
+  "orSignInAs": "Nebo se přihlaste jako",
+  "adminMaine": "Admin Maine",
+  "enterYourLastName": "Zadejte své příjmení",
+  "lastName": "Příjmení",
+  "enterYourLogin": "Zadejte přihlašovací údaje",
+  "enterYourPassword": "Zadejte své heslo",
+  "selectCategoriesFromTheListnmaybeSeveral": "Vyberte kategorie ze seznamu\\n(možná několik)",
+  "setPercentageOfIncomeIfNecessary": "V případě potřeby nastavte procento příjmu",
+  "setPercentageOfIncome": "Nastavit procento příjmu",
+  "percentage": "Procento",
+  "visibilityLevelWithACrossFromTheList": " Úroveň viditelnosti s křížkem ze seznamu",
+  "employeePercentage": "Procento zaměstnance",
+  "totalPercentagePerMonth": "Celkové procento za měsíc",
+  "amountPercentagePerDay": "Procento částky za den",
+  "showPhone": "Zobrazit telefon",
+  "totalPriceServicePerDay": "Celková cena služby za den",
+  "saveEmployee": "Uložit zaměstnance",
+  "numberOfServiceForMonth": "Počet služeb za měsíc",
+  "hello":"Ahoj ahoj, ",
+  "addReport": "Přidat přehled",
+  "nameOfClient": "Jméno klienta",
+  "lastNameOfClient": "Příjmení klienta",
+  "phoneNumber": "Telefonní číslo",
+  "newCustomer": "Nový zákazník",
+  "regularCustomer": "Běžný zákazník",
+  "paymentByCard": "Platba kartou",
+  "selectCategory": "Vyberte kategorii",
+  "selectService": "Vybrat službu",
+  "priceOfService": "Cena služby",
+  "price": "Cena",
+  "submit": "Odeslat",
+  "addService": "Přidat službu",
+  "createOrSelectACategory": "Vytvořit nebo vybrat kategorii",
+  "orCreateANewCategory": "Nebo vytvořit novou kategorii",
+  "enterCategoryName": "Zadejte název kategorie",
+  "nameOfTheService": "Název služby",
+  "categoryName": "Název kategorie",
+  "enterServiceName": "Zadejte název služby",
+  "serviceName": "Název služby",
+  "costOfMaterialsForThisServices": "Náklady na materiály pro tyto služby",
+  "enterPrice": "Zadejte cenu",
+  "adminLogin": "Přihlášení správce",
+  "setAdminPassword": "Nastavit heslo správce",
+  "enterPasswordHere": "Sem zadejte heslo",
+  "forgotPassword": "Zapomněli jste heslo?",
+  "resetHere": "Resetovat zde",
+  "exit": "Exit",
+  "areYouSureYouWantToExitTheApp": "Jste si jistý? Chcete aplikaci ukončit.",
+  "exitApp": "Ukončit aplikaci",
+  "yes":"Ano ano",
+  "no": "Ne",
+  "costsFilter": "Filtr nákladů",
+  "clear": "Clear",
+  "nameOfCost": "Název nákladů",
+  "costsPriceRange": "Cenové rozpětí nákladů",
+  "minPrice": "Minimální cena",
+  "maxPrice": "Maximální cena",
+  "applyFilter": "Použít filtr",
+  "cancel": "Zrušit",
+  "confirm": "Potvrdit",
+  "all": "All",
+  "done": "Hotovo",
+  "newPassword": "Nové heslo",
+  "editCategory": "Upravit kategorii",
+  "editService": "Upravit službu",
+  "answerTheSecurityQuestionsToLogin": "Odpovězte na bezpečnostní otázky pro přihlášení",
+  "answer": "Odpovědět",
+  "incorrectAnswer": "Nesprávná odpověď",
+  "pleaseTryAgain": "Zkuste to znovu",
+  "previousQuestion": "Předchozí otázka",
+  "selectQuestion": "Vyberte otázku",
+  "pleaseSelectAQuestion": "Vyberte prosím otázku",
+  "pleaseFillInTheAnswerField": "Vyplňte prosím pole pro odpověď",
+  "report": "Report: ",
+  "employeeName": "Jméno zaměstnance: ",
+  "isRegularCus": "Je pravidelné Cus. : ",
+  "cardPay": "Platba kartou: ",
+  "date": "Datum: ",
+  "category": "kategorie: ",
+  "service": "Service: ",
+  "editReport": "Upravit zprávu",
+  "employees": "Zaměstnanci",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Nenalezen žádný zaměstnanec\\nPřidejte prosím nového zaměstnance.",
+  "search": "Hledat",
+  "accessLevel": "Úroveň přístupu",
+  "notLimited": "Bez omezení",
+  "limited": "Limited",
+  "applyFilters": "Použít filtry",
+  "filters": "Filtry",
+  "phone": "Telefon",
+  "priceRange": "Cenový rozsah",
+  "dates": "Data",
+  "from": "Od",
+  "to": "To",
+  "masters": "Mistři",
+  "services": "Služby",
+  "selectLanguage": "Vybrat jazyk",
+  "nameOfncost": "Název\\nCena",
+  "relatedncategories": "Související\\nkategorie",
+  "deductednfromTax": "Odečteno\\nZ DANĚ",
+  "systematicnexpenditure": "Systmatic\\nVýdaje",
+ "deleteCost": "Smazat cenu",
+ "areYouSureYouWantToDeleteThisCost": "Opravdu chcete smazat tyto náklady?",
+ "noData": "Žádná data",
+ "regncus": "Reg\\nCus",
+ "cardnpay": "Karta\\nZaplatit",
+ "employeendata": "Zaměstnanec\\nData",
+ "customerndata": "Zákazník\\nData",
+ "newncus": "Nový\\nCus",
+ "total": "Celkem",
+ "deleted": "Smazáno",
+ "itemDeleted": "Položka smazána",
+ "deleteCategory": "Smazat kategorii",
+ "areYouSureYouWantToDeleteThisCategory": "Opravdu chcete smazat tuto kategorii?",
+ "deleteService": "Smazat službu",
+ "areYouSureYouWantToDeleteThisService": "Opravdu chcete smazat tuto službu?",
+ "noServicesFoundnpleaseAddANewService": "Nenalezeny žádné služby\\nPřidejte prosím novou službu",
+ "backupRestoredSuccessfully": "Záloha byla úspěšně obnovena!",
+ "reloadApp": "Znovu načíst aplikaci",
+ "restoringDatabase": "Obnovuji databázi...",
+ "exported": "Exportováno",
+ "checkYourFileInTheDownloadsFolder": "Zkontrolujte svůj soubor ve složce Stažené soubory",
+ "selectTheDatabaseToRestore": "Vyberte databázi k obnovení",
+ "reportssalesTracker": "Sledování přehledů/prodejů",
+ "costsTracker": "Sledování nákladů",
+ "clearDates": "Vymazat data",
+ "anErrorOccurred": "Došlo k chybě",
+ "noDataFound": "Nebyla nalezena žádná data",
+ "masternname": "Mistr\\nJméno",
+ "noRegnclient": "Ne. Reg\\nKlient",
+ "noNewnclient": "Ne. Nový\\nKlient",
+ "noOfnservices": "Počet\\nslužeb",
+ "cost": "Cena",
+ "newnclient": "Nový\\nKlient",
+ "regnclient": "Reg\\nKlient",
+ "numOfnservices": "Počet\\nSlužeb",
+ "costs": "náklady",
+ "sales": "Prodej"
 }
